--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <h1>G3 Architects</h1>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Log In</a></li>
+            </ul>
+        </nav>
+        <section class="banner-container">
+            <div class="banner-content">
+                <h1>Brand New <br>Group of Architects</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="btn-primary" type="button">Explore More</button>
+            </div>
+            <div class="banner-image">
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
+    </header>
+    <main>
+        <section class="quick-list">
+            <div class="quick-list-images">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="quick-list-content">
+                <h1 ><span style="font-weight: 500; color: rgba(114, 114, 114, 1);">Quick list</span> <span style="font-weight: 700; color: rgba(19, 19, 19, 1);">of Our</span> <span style="font-weight: 700; color: rgba(255, 144, 14, 1);">Features</span></h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary" type="button">Explore More</button>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
