added facts, sponsors and footer section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>Brand New <br>Group of Architects</h1>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even</p>
-                    <button class="btn-primary" type="button">Explore More</button>
+                <button class="btn-primary" type="button">Explore More</button>
             </div>
             <div class="banner-image">
                 <img src="images/banner.png" alt="">
@@ -40,13 +40,64 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="quick-list-content">
-                <h1 ><span style="font-weight: 500; color: rgba(114, 114, 114, 1);">Quick list</span> <span style="font-weight: 700; color: rgba(19, 19, 19, 1);">of Our</span> <span style="font-weight: 700; color: rgba(255, 144, 14, 1);">Features</span></h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h1><span style="font-weight: 500; color: rgba(114, 114, 114, 1);">Quick list</span> <span
+                        style="font-weight: 700; color: rgba(19, 19, 19, 1);">of Our</span> <span
+                        style="font-weight: 700; color: rgba(255, 144, 14, 1);">Features</span></h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary" type="button">Explore More</button>
             </div>
         </section>
+
+        <section class="facts">
+            <div class="fact-content">
+                <h3>Some Facts</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="fact-card-container">
+                <div class="fact-card-content">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h4>54</h4>
+                    <p>Award Winnings</p>
+                </div>
+                <div class="fact-card-content">
+                    <img src="images/icons/projects.png" alt="">
+                    <h4>1458</h4>
+                    <p>Project Finished</p>
+                </div>
+                <div class="fact-card-content">
+                    <img src="images/icons/customers.png" alt="">
+                    <h4>590</h4>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="fact-card-content">
+                    <img src="images/icons/email.png" alt="">
+                    <h4>22578</h4>
+                    <p>Email Send</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="sponsors">
+            <div class="sponsors-content">
+                <h3>Our Sponspors</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsors-image">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-content">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
 </body>
 
 </html>
