--- a/index.html
+++ b/index.html
@@ -49,6 +49,42 @@
             </div>
         </section>
 
+        <section class="features">
+            <div class="feature-container">
+                <div class="feature-content">
+                    <h3>Features you will <br>love & enjoy</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+                <div class="feature-card-container">
+                    <div class="feature-card-content">
+                        <h4>Desktop & Mobile Version</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-card-content">
+                        <h4>Drag & Drop Builder</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-card-content">
+                        <h4>Awesome Modern Design</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="feature-card-content">
+                        <h4>Super Easy to Edit</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+            <div class="feature-image">
+                <img src="images/architect.png" alt="">
+                <button id="button-batch" class="btn-primary" type="button">
+                    <span id="batch-year">10+Year</span><br>
+                    <span id="batch-experience">Experience</span>
+                </button>
+            </div>
+        </section>
+
         <section class="facts">
             <div class="fact-content">
                 <h3>Some Facts</h3>
@@ -82,7 +118,8 @@
         <section class="sponsors">
             <div class="sponsors-content">
                 <h3>Our Sponspors</h3>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.</p>
             </div>
             <div class="sponsors-image">
                 <img src="images/sponsors/spotify.png" alt="">
