--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 <div class="feature-card-container">
                     <div class="feature-card-content">
                         <h4>Desktop & Mobile Version</h4>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
                     </div>
                     <div class="feature-card-content">
                         <h4>Drag & Drop Builder</h4>
@@ -68,11 +69,13 @@
                     </div>
                     <div class="feature-card-content">
                         <h4>Awesome Modern Design</h4>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
                     </div>
                     <div class="feature-card-content">
                         <h4>Super Easy to Edit</h4>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
                     </div>
                 </div>
             </div>
