--- a/index.html
+++ b/index.html
@@ -1,143 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3- ARCHITECTURE</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <h1>G3 Architects</h1>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Log In</a></li>
-            </ul>
-        </nav>
-        <section class="banner-container">
-            <div class="banner-content">
-                <h1>Brand New <br>Group of Architects</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="btn-primary" type="button">Explore More</button>
-            </div>
-            <div class="banner-image">
-                <img src="images/banner.png" alt="">
-            </div>
-        </section>
+      <nav>
+        <h1>G3 Architects</h1>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Log In</a></li>
+        </ul>
+      </nav>
+      <section class="banner-container">
+        <div class="banner-content">
+          <h1>Brand New <br />Group of Architects</h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary" type="button">Explore More</button>
+        </div>
+        <div class="banner-image">
+          <img src="images/banner.png" alt="" />
+        </div>
+      </section>
     </header>
     <main>
-        <section class="quick-list">
-            <div class="quick-list-images">
-                <img src="images/team1.png" alt="">
-                <img src="images/team2.png" alt="">
-                <img src="images/team3.png" alt="">
-                <img src="images/team4.png" alt="">
-            </div>
-            <div class="quick-list-content">
-                <h1><span style="font-weight: 500; color: rgba(114, 114, 114, 1);">Quick list</span> <span
-                        style="font-weight: 700; color: rgba(19, 19, 19, 1);">of Our</span> <span
-                        style="font-weight: 700; color: rgba(255, 144, 14, 1);">Features</span></h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="btn-primary" type="button">Explore More</button>
-            </div>
-        </section>
+      <section class="quick-list">
+        <div class="quick-list-images">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="quick-list-content">
+          <h1>
+            <span style="font-weight: 500; color: rgba(114, 114, 114, 1)"
+              >Quick list</span
+            >
+            <span style="font-weight: 700; color: rgba(19, 19, 19, 1)"
+              >of Our</span
+            >
+            <span style="font-weight: 700; color: rgba(255, 144, 14, 1)"
+              >Features</span
+            >
+          </h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary" type="button">Explore More</button>
+        </div>
+      </section>
 
-        <section class="features">
-            <div class="feature-container">
-                <div class="feature-content">
-                    <h3>Features you will <br>love & enjoy</h3>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, or randomised words which don't look even</p>
-                </div>
-                <div class="feature-card-container">
-                    <div class="feature-card-content">
-                        <h4>Desktop & Mobile Version</h4>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered alteration in some form, by injected humour, or randomised...........</p>
-                    </div>
-                    <div class="feature-card-content">
-                        <h4>Drag & Drop Builder</h4>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered alteration in some form, by injected humour, or randomised...........</p>
-                    </div>
-                    <div class="feature-card-content">
-                        <h4>Awesome Modern Design</h4>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered alteration in some form, by injected humour, or randomised...........</p>
-                    </div>
-                    <div class="feature-card-content">
-                        <h4>Super Easy to Edit</h4>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered alteration in some form, by injected humour, or randomised...........</p>
-                    </div>
-                </div>
+      <section class="features">
+        <div class="feature-container">
+          <div class="feature-content">
+            <h3>Features you will <br />love & enjoy</h3>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+          </div>
+          <div class="feature-card-container">
+            <div class="feature-card-content">
+              <h4>Desktop & Mobile Version</h4>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
             </div>
-            <div class="feature-image">
-                <img src="images/architect.png" alt="">
-                <button id="button-batch" class="btn-primary" type="button">
-                    <span id="batch-year">10+Year</span><br>
-                    <span id="batch-experience">Experience</span>
-                </button>
+            <div class="feature-card-content">
+              <h4>Drag & Drop Builder</h4>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
             </div>
-        </section>
+            <div class="feature-card-content">
+              <h4>Awesome Modern Design</h4>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="feature-card-content">
+              <h4>Super Easy to Edit</h4>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="feature-image">
+          <img src="images/architect.png" alt="" />
+          <button id="button-batch" class="btn-primary" type="button">
+            <span id="batch-year">10+Year</span><br />
+            <span id="batch-experience">Experience</span>
+          </button>
+        </div>
+      </section>
 
-        <section class="facts">
-            <div class="fact-content">
-                <h3>Some Facts</h3>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration.</p>
-            </div>
-            <div class="fact-card-container">
-                <div class="fact-card-content">
-                    <img src="images/icons/ribon.png" alt="">
-                    <h4>54</h4>
-                    <p>Award Winnings</p>
-                </div>
-                <div class="fact-card-content">
-                    <img src="images/icons/projects.png" alt="">
-                    <h4>1458</h4>
-                    <p>Project Finished</p>
-                </div>
-                <div class="fact-card-content">
-                    <img src="images/icons/customers.png" alt="">
-                    <h4>590</h4>
-                    <p>Clients Worked</p>
-                </div>
-                <div class="fact-card-content">
-                    <img src="images/icons/email.png" alt="">
-                    <h4>22578</h4>
-                    <p>Email Send</p>
-                </div>
-            </div>
-        </section>
+      <section class="facts">
+        <div class="fact-content">
+          <h3>Some Facts</h3>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="fact-card-container">
+          <div class="fact-card-content">
+            <img src="images/icons/ribon.png" alt="" />
+            <h4>54</h4>
+            <p>Award Winnings</p>
+          </div>
+          <div class="fact-card-content">
+            <img src="images/icons/projects.png" alt="" />
+            <h4>1458</h4>
+            <p>Project Finished</p>
+          </div>
+          <div class="fact-card-content">
+            <img src="images/icons/customers.png" alt="" />
+            <h4>590</h4>
+            <p>Clients Worked</p>
+          </div>
+          <div class="fact-card-content">
+            <img src="images/icons/email.png" alt="" />
+            <h4>22578</h4>
+            <p>Email Send</p>
+          </div>
+        </div>
+      </section>
 
-        <section class="sponsors">
-            <div class="sponsors-content">
-                <h3>Our Sponspors</h3>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration.</p>
-            </div>
-            <div class="sponsors-image">
-                <img src="images/sponsors/spotify.png" alt="">
-                <img src="images/sponsors/amazon.png" alt="">
-                <img src="images/sponsors/google.png" alt="">
-                <img src="images/sponsors/telerama.png" alt="">
-                <img src="images/sponsors/figma.png" alt="">
-            </div>
-        </section>
+      <section class="sponsors">
+        <div class="sponsors-content">
+          <h3>Our Sponspors</h3>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponsors-image">
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
+        </div>
+      </section>
     </main>
     <footer>
-        <div class="footer-content">
-            <p>All rights reserved copyright@2023 startup landing page design</p>
-        </div>
+      <div class="footer-content">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
